--- a/src/main/vue/public/index.ejs
+++ b/src/main/vue/public/index.ejs
@@ -18,7 +18,7 @@
         <title>{{ title }}</title>
         <meta name="keywords" content="{{ meta.keywords }}">
         <meta name="description" content="{{meta.description}}">
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="<%= htmlWebpackPlugin.options.base %>favicon.ico">
     <% } else{ %>
         <title><%= htmlWebpackPlugin.options.title %></title>
     <% } %>
