--- a/src/main/vue/public/index.ejs
+++ b/src/main/vue/public/index.ejs
@@ -36,7 +36,7 @@
     -->
     <!--vue-ssr-outlet-->
 <% }else{ %>
-    <div id="jvue-root"></div>
+    <div id="app"></div>
 <% } %>
 <!-- built files will be auto injected -->
 </body>
