--- a/src/main/vue/public/index.ejs
+++ b/src/main/vue/public/index.ejs
@@ -2,7 +2,7 @@
   _______
  |__   __|
     | |  ___  _ __ __      __ ___  _ __
-    | | / _ \| '__|\ \ /\ / // _ \| '__|
+    | | / _ \| \"__|\ \ /\ / // _ \| \"__|
     | ||  __/| |    \ V  V /|  __/| |
     |_| \___||_|     \_/\_/  \___||_|
 -->
@@ -19,7 +19,7 @@
 <body>
 <noscript>
     <strong>
-        We're sorry but this page doesn't work properly without JavaScript enabled. Please enable it to continue.
+        We are sorry but this page doesn't work properly without JavaScript enabled. Please enable it to continue.
     </strong>
 </noscript>
 <% if(htmlWebpackPlugin.options.isSsr){ %>
@@ -27,7 +27,7 @@
     https://ssr.vuejs.org/zh/guide/hydration.html
     注意，这里并没有添加 id="app"，而是添加 data-server-rendered 属性：你需要自行添加 ID 或其他能够选取到应用程序根元素的选择器，否则应用程序将无法正常激活。
     -->
-    <!--vue-ssr-outlet-->
+    <%= "<sever-placeholder th:utext=\"${content}\"></sever-placeholder>" %>
 <% }else{ %>
     <div id="app"></div>
 <% } %>
