--- a/src/main/vue/public/index.ejs
+++ b/src/main/vue/public/index.ejs
@@ -27,10 +27,13 @@
     https://ssr.vuejs.org/zh/guide/hydration.html
     注意，这里并没有添加 id="app"，而是添加 data-server-rendered 属性：你需要自行添加 ID 或其他能够选取到应用程序根元素的选择器，否则应用程序将无法正常激活。
     -->
-    <%= "<sever-placeholder th:utext=\"${content}\"></sever-placeholder>" %>
+    <%= "<sever th:utext=\"${content}\"></sever>" %>
+    <placeholder>
+        <!--vue-ssr-outlet-->
+    </placeholder>
 <% }else{ %>
     <div id="app"></div>
+    <!-- built files will be auto injected -->
 <% } %>
-<!-- built files will be auto injected -->
 </body>
 </html>
