--- a/src/main/vue/public/index.ejs
+++ b/src/main/vue/public/index.ejs
@@ -23,6 +23,7 @@
     </strong>
 </noscript>
 <% if(htmlWebpackPlugin.options.isSsr){ %>
+    <script>window.BROWSER_ENV={ssrEnv:"ssrc"}</script>
     <!--
     https://ssr.vuejs.org/zh/guide/hydration.html
     注意，这里并没有添加 id="app"，而是添加 data-server-rendered 属性：你需要自行添加 ID 或其他能够选取到应用程序根元素的选择器，否则应用程序将无法正常激活。
@@ -32,6 +33,7 @@
         <!--vue-ssr-outlet-->
     </placeholder>
 <% }else{ %>
+    <script>window.BROWSER_ENV={ssrEnv:"c"}</script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
 <% } %>
