--- a/src/main/vue/public/index.ejs
+++ b/src/main/vue/public/index.ejs
@@ -7,14 +7,20 @@
     |_| \___||_|     \_/\_/  \___||_|
 -->
 <!DOCTYPE html>
-<html lang="zh-cmn-Hans">
+<html lang="zh-cmn-Hans" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <% if(htmlWebpackPlugin.options.isSsr){ %>
+        <%= "<title th:text=\"${httpContext.title}\"></title>" %>
+        <%= "<meta name=\"keywords\" th:content=\"${httpContext.meta.keywords}\"/>" %>
+        <%= "<meta name =\"description\" th:content=\"${httpContext.meta.description}\"/>" %>
+    <% }else{ %>
+        <title><%= htmlWebpackPlugin.options.title %></title>
+    <% } %>
 </head>
 <body>
 <noscript>
@@ -23,7 +29,7 @@
     </strong>
 </noscript>
 <% if(htmlWebpackPlugin.options.isSsr){ %>
-    <script>window.BROWSER_ENV={ssrEnv:"ssrc"}</script>
+    <script>window.BROWSER_ENV = {ssrEnv: "ssrc"}</script>
     <!--
     https://ssr.vuejs.org/zh/guide/hydration.html
     注意，这里并没有添加 id="app"，而是添加 data-server-rendered 属性：你需要自行添加 ID 或其他能够选取到应用程序根元素的选择器，否则应用程序将无法正常激活。
@@ -33,7 +39,7 @@
         <!--vue-ssr-outlet-->
     </placeholder>
 <% }else{ %>
-    <script>window.BROWSER_ENV={ssrEnv:"c"}</script>
+    <script>window.BROWSER_ENV = {ssrEnv: "c"}</script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
 <% } %>
